--- a/style.css
+++ b/style.css
@@ -1,22 +1,52 @@
+@media (max-width: 700px) {
+    .game {
+        flex-direction: column-reverse;
+    }
+    .controls {
+        margin-top: 20px;
+    }
+}
 * {
     font-family: 'Open Sans', sans-serif;
 }
 body {
-    background-color: #181818;
+    background-color: antiquewhite;
+}
+.game {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
 }
 h1 {
-    color: antiquewhite;
+    text-align: center;
+}
+.controls {
+    display: flex;
+    flex-direction: column;
+}
+.sketchpad {
+    border: 6px solid black;
+    border-radius: 5px;
+}
+button {
+    background: none;
+    font-size: 16px;
+    padding: 10px 20px;
+    border: 1px solid black;
+    border-radius: 5px;
+    width: 100%;
 }
 .container {
     background-color: white;
     display: flex;
     flex-wrap: wrap;
-    width: 600px;
-    height: 600px;
+    width: 500px;
+    height: 500px;
 }
-/* .container div {
-    border: 1px solid black;
-} */
-.hovered {
+.black {
     background-color: black;
+}
+button, input {
+    cursor: pointer;
 }
